# wasm-cuda-simple-examples

./: .gitignore  CMakeLists.txt  README.md
include/: cuda-helper.h
src/: device.c  mem.c  mulMatrix.c  sumArray.c
